# soroban-test-examples

./: .gitignore  Cargo.toml  README.md
atomic-swap/: Cargo.toml
constructor-args/: Cargo.toml
constructor-args/src/: lib.rs  test.rs
custom-types/: Cargo.toml
custom-types/src/: lib.rs
increment/: Cargo.toml
increment/src/: lib.rs  test.rs
needs-a-signature/: Cargo.toml  README.md
needs-a-signature/src/: lib.rs  test.rs
this-one-signs/: Cargo.toml  README.md
this-one-signs/src/: lib.rs  test.rs
this-one-signs/test_snapshots/test/: test.1.json
token/: Cargo.toml
token/src/: test.rs
